@@ -20,7 +20,7 @@ Using the Google Visualisation API with R
 \tabular{ll}{
 	Package: \tab googleVis\cr
 	Type: \tab Package\cr
-	Version: \tab 0.2.18\cr
+	Version: \tab 0.3.0\cr
 	Date: \tab 2012-10-14\cr
 	License: \tab GPL version 2 or later\cr
 	 }
