@@ -207,7 +207,7 @@
 	title = {google{V}is: Using the {G}oogle {V}isualisation {A}{P}{I} with {R}},
 	author = {Markus Gesmann and Diego de Castillo},
 	year = {2012},
-	note ={R package version 0.2.18},
+	note ={R package version 0.3.0},
 	Howpublished = {\url{http://code.google.com/p/google-motion-charts-with-r/}}
 }
 
